feat init: app bet

--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
                             <p class="text-white my-4">Dooring adalah platform mobile dan web untuk mengakomodir kebutuhan pengiriman logistik personal maupun perusahaan Anda.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
-                                <a href="#">
+                                <a href="dooringApp - Beta0.01">
                                     <img src="assets/img/icon/google-play.png" alt="">
                                 </a>
-                                <a href="#">
+                                <!-- <a href="#">
                                     <img src="assets/img/icon/app-store.png" alt="">
-                                </a>
+                                </a> -->
                             </div>
-                            <span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on iPhone, iPad and all Android devices</span>
+                            <span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on Android devices</span>
+                            <!-- <span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on iPhone, iPad and all Android devices</span> -->
                         </div>
                     </div>
                     <div class="col-12 col-md-5 col-lg-6">
@@ -591,12 +592,12 @@
                             </h2>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex justify-content-center">
-                                <a href="#">
+                                <a href="dooringApp - Beta0.01">
                                     <img src="assets/img/icon/google-play.png" alt="">
                                 </a>
-                                <a href="#">
+                                <!-- <a href="#">
                                     <img src="assets/img/icon/app-store.png" alt="">
-                                </a>
+                                </a> -->
                             </div>
                             <span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on iPhone, iPad and all Android devices</span>
                         </div>
@@ -704,9 +705,9 @@
                                     <a href="#">
                                         <img src="assets/img/icon/google-play-black.png" alt="">
                                     </a>
-                                    <a href="#">
+                                    <!-- <a href="#">
                                         <img src="assets/img/icon/app-store-black.png" alt="">
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </div>
