--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <p class="text-white my-4">Dooring adalah platform mobile dan web untuk mengakomodir kebutuhan pengiriman logistik personal maupun perusahaan Anda.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
-                                <a href="dooringApp - Beta0.01">
+                                <a href="dooringApp-Beta01.apk">
                                     <img src="assets/img/icon/google-play.png" alt="">
                                 </a>
                                 <!-- <a href="#">
@@ -592,7 +592,7 @@
                             </h2>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex justify-content-center">
-                                <a href="dooringApp - Beta0.01">
+                                <a href="dooringApp-Beta01.apk">
                                     <img src="assets/img/icon/google-play.png" alt="">
                                 </a>
                                 <!-- <a href="#">
